--- a/src/app/app2/app2.component.html
+++ b/src/app/app2/app2.component.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>prueba</title>
+  <title>app2</title>
+  <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
-
- <router-outlet></router-outlet>
-
+<hr>
 </body>
 </html>
