--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>prueba</title>
+  <title>home</title>
 </head>
 <body>
-
- <router-outlet></router-outlet>
-
+<h1>{{title}}</h1>
 </body>
 </html>
